# windmill-ai-bot

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_07_05_1203-a159b462c9a0_init_migrations.py
app/: __init__.py  __main__.py  config.py  db.py  dependencies.py  ml.py  models.py
