[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Mootfrost777 <andrey13102007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.8.0"
aiorun = "^2024.5.1"
pydantic-settings = "^2.3.4"
sqlalchemy = {extras = ["aiosqlite"], version = "^2.0.31"}
torch = "^2.3.1"
torchvision = "^0.18.1"
numpy = "^1.25.2"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
